--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,17 @@ dependencies:
   riverpod: ^2.0.2
   flutter_riverpod: ^2.0.2
   shared_preferences: ^2.0.15
+  flutter_launcher_icons: ^0.10.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_native_splash: ^2.0.1+1
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/icon/icon.png
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
